probably fix css with vh and overflow

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@
 }
 body{
     background-color: black;
+    overflow: hidden;
+    
 }
 
 /* header */
@@ -27,6 +29,7 @@ header{
     padding: 0.3rem;    
     margin-left: 0.5rem;
     border-radius: 5px  ;
+    
 }
 
 .flex{
@@ -38,6 +41,10 @@ header{
 /* /header */
 
 /* main */
+
+main{
+    height: calc(100% - 80px);
+}
 
 .tag{
     position: absolute;
@@ -54,11 +61,14 @@ header{
     justify-content: space-between;
     max-width: 1308px;
     margin: 15px auto;
+    overflow-y: auto;
 }
 
 .img{
     display: flex;
     align-items: flex-end;
+    height: 100%;
+    max-width: 100%;
 
 }
 /* /main */
@@ -69,9 +79,11 @@ header{
     width: 100%;
     display: flex;
     background-color:var(--nav);
-    height: 75px;
     align-items: center;
     gap: 6rem;
+    overflow-y: auto;
+    height: 10vh;
+   
 }
 
 .personal{
